# gamezone-app

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
account/: filters.py  manager.py  models.py  mutations.py  schema.py  types.py
account/migrations/: 0001_initial.py  0002_alter_user_guid.py
chat/: models.py  types.py
chat/migrations/: 0001_initial.py
core/: json.py  mail.py  utils.py
games/: admin.py  models.py  types.py
games/basaarblot/: apps.py  models.py
games/bazarblot/: admin.py  apps.py  card_game_logic.py  choices.py  fields.py  game.py  inputs.py  models.py  mutations.py  schema2.py  types.py
games/bazarblot/migrations/: 0001_initial.py  0002_alter_table_winner.py  0003_alter_roundplayerscards_round.py
games/checkers/: GamePhase.py  admin.py  apps.py  choices.py  game.py  models.py  mutations.py  types.py  utils.py
games/checkers/migrations/: 0001_initial.py  0002_board_is_active.py  0003_remove_board_players_alter_board_guid_boardplayers.py  0004_board_players.py  0005_alter_histories_guid.py  0005_remove_histories_from_point_and_more.py  0006_multiplayergame.py  0006_remove_histories_to_point_histories_to_points.py  0007_alter_board_grid.py  0007_remove_histories_from_point_and_more.py
games/migrations/: 0001_initial.py  0002_alter_game_options.py  0003_alter_game_guid.py
games/millionaire/: admin.py  apps.py  models.py  mutations.py  types.py
games/millionaire/migrations/: 0001_initial.py
jwt_auth/: backends.py  consts.py  core.py  decorators.py  extension.py  helper.py  models.py  mutations.py  settings.py  tokens.py  types.py
jwt_auth/jwt_token/: admin.py  apps.py  models.py
jwt_auth/jwt_token/migrations/: 0001_initial.py
server/: schema.py  urls.py  wsgi.py
server/settings/: __init__.py  base.py  database.py  local.py
templates/email/: email_change_confirm_new_email.html  email_change_confirm_new_email_subject.txt  email_change_notify_previous_email.html  email_change_notify_previous_email_subject.txt  password_reset_email.html  password_reset_email_subject.txt  signup_email.html  signup_email_subject.txt  welcome_email.html  welcome_email_subject.txt
