[tool.poetry]
name = "gamezone-app"
version = "0.1.0"
description = ""
authors = ["Vachagan Grigoryan <vachagan.grigoryan@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aniso8601 = "7.0.0"
asgiref = "3.4.1"
Django = "4.0.1"
graphene = "2.1.9"
graphene-django = "2.15.0"
graphql-core = "2.3.2"
graphql-relay = "2.0.1"
promise = "2.3"
Rx = "1.6.1"
singledispatch = "3.7.0"
six = "1.16.0"
sqlparse = "0.4.2"
text-unidecode = "1.3"
django-graphql-jwt = "^0.3.4"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
Pillow = "^9.0.1"
django-filter = "^21.1"
djangorestframework = "^3.13.1"
Markdown = "^3.3.6"
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
